Week#3 - update README.md